Add logging framework & clean up tests